# ChangeLog for media-plugins/gst-plugins-theora
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-theora/ChangeLog,v 1.176 2012/10/21 08:01:01 tetromino Exp $

*gst-plugins-theora-0.10.36 (21 Oct 2012)

  21 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  +gst-plugins-theora-0.10.36.ebuild:
  Version bump with some encoder fixes.

  17 May 2012; Alexis Ballier <aballier@gentoo.org>
  gst-plugins-theora-0.10.35.ebuild:
  keyword ~amd64-fbsd

  15 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org>
  gst-plugins-theora-0.10.35.ebuild:
  ppc/ppc64 stable wrt #382225

  11 Oct 2011; Jeroen Roovers <jer@gentoo.org>
  gst-plugins-theora-0.10.35.ebuild:
  Stable for HPPA (bug #382225).

  09 Oct 2011; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-theora-0.10.35.ebuild:
  alpha/ia64/sh/sparc stable wrt #382225

  03 Oct 2011; Markus Meier <maekke@gentoo.org>
  gst-plugins-theora-0.10.35.ebuild:
  arm stable, bug #382225

  25 Sep 2011; Tony Vroon <chainsaw@gentoo.org>
  gst-plugins-theora-0.10.35.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo &
  Tomáš "Mepho" Pružina in bug #382225.

  20 Sep 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  gst-plugins-theora-0.10.35.ebuild:
  x86 stable wrt bug #382225

  25 Aug 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  -gst-plugins-theora-0.10.31.ebuild:
  Remove old

  25 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org>
  gst-plugins-theora-0.10.32.ebuild:
  ppc/ppc64 stable wrt #368281

*gst-plugins-theora-0.10.35 (30 Jun 2011)

  30 Jun 2011; Mart Raudsepp <leio@gentoo.org>
  -gst-plugins-theora-0.10.29.ebuild, +gst-plugins-theora-0.10.35.ebuild:
  Version bump. Many fixes to the encoder: don't reset the video quality
  when setting the bitrate; support adjustment of the speed-level property
  while running, and use the same defaults as libtheora for it

  09 Jun 2011; Jeroen Roovers <jer@gentoo.org>